# stone-tauri

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  package.json  session-ses_4424.md  tsconfig.json  vite.config.ts
src/: App.css  (+4 more)
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_commands.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-01-12-173107-0000_initial_schema/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  quick_capture_window.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/inbound/: app_state.rs  attachment_commands.rs  database_commands.rs  export_commands.rs  git_commands.rs  graph_commands.rs  mod.rs  note_commands.rs  notebook_commands.rs  performance_commands.rs  quick_capture_commands.rs  search_commands.rs  settings_commands.rs  system_commands.rs  tag_commands.rs  task_commands.rs  topic_commands.rs  version_commands.rs  workspace_commands.rs
src-tauri/src/adapters/outbound/: mod.rs
src-tauri/src/application/usecases/: attachment_usecases.rs  database_usecases.rs  export_usecases.rs  git_usecases.rs  graph_usecases.rs  mod.rs  note_usecases.rs  notebook_usecases.rs  quick_capture_usecases.rs  search_usecases.rs  settings_usecases.rs  system_usecases.rs  tag_usecases.rs  (+4 more)
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: container.rs  mod.rs
src-tauri/src/shared/: mod.rs
src-tauri/tests/: domain_entities_test.rs  domain_services_test.rs  domain_value_objects_test.rs  integration_test_commands.rs  lib.rs  shared_database_test.rs  test_note_path.rs
src-tauri/tests/helpers/: mod.rs
src-tauri/tests/integration/: mod.rs  note_linking.rs  note_persistence.rs  quick_capture.rs  search_workflows.rs  workspace_sync.rs
(+334 files in other folders)
