[package]
name = "stone-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stone_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Diesel ORM)
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
md-5 = "0.10"

# Markdown Processing
pulldown-cmark = "0.11"
pulldown-cmark-escape = "0.11"

# File System
notify = "6.1"
glob = "0.3"
walkdir = "2.5"

# Git Operations
git2 = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.12.2"

# System Directories
dirs = "5.0"

mime_guess = "2.0"
sysinfo = "0.37.2"
fastembed = "5.8.1"

[dev-dependencies]
tempfile = "3.13"
